[gd_scene load_steps=3 format=3 uid="uid://d0o2qxdm28awm"]

[ext_resource type="Script" path="res://UI/recipe_book.gd" id="1_i3oyy"]

[sub_resource type="LabelSettings" id="LabelSettings_u1v7q"]
font_size = 36
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="RecipeBook" type="Control"]
z_index = 1000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i3oyy")

[node name="Book" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="Book"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 14.0
offset_right = -13.0
offset_bottom = -10.0

[node name="RecipeList" type="ScrollContainer" parent="Book"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 24.0
offset_right = -32.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Recipes" type="VBoxContainer" parent="Book/RecipeList"]
layout_mode = 2

[node name="Toggle" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 42.0
offset_top = -81.0
offset_right = 227.0
offset_bottom = -37.0
grow_vertical = 0
toggle_mode = true
text = "Recipe Book"

[node name="RecipeNotification" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 669.0
offset_top = -120.0
offset_right = 1410.0
offset_bottom = -70.0
grow_vertical = 0
label_settings = SubResource("LabelSettings_u1v7q")
horizontal_alignment = 2

[connection signal="toggled" from="Toggle" to="." method="on_button_toggle"]
